--- a/index.html
+++ b/index.html
@@ -269,18 +269,20 @@
     max-height:260px;
   }
 }
-#confetti-canvas{
+#firework-canvas{
   position:fixed;
   inset:0;
   pointer-events:none;
   z-index:9999;
 }
 
+
    
   </style>
 </head>
 <body>
-<canvas id="confetti-canvas"></canvas>
+<canvas id="firework-canvas"></canvas>
+
 
 
   <!-- Header -->
@@ -840,59 +842,106 @@ setInterval(()=>{
 </script>
 
 <script>
-const canvas = document.getElementById("confetti-canvas");
+const canvas = document.getElementById("firework-canvas");
 const ctx = canvas.getContext("2d");
 
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-const confettiCount = 220;
-const confetti = [];
-const colors = ["#ff4f88","#ffcc00","#00e5ff","#7cff00","#ff5722","#9c27b0"];
-
-for(let i=0;i<confettiCount;i++){
-  confetti.push({
-    x: canvas.width / 2,
-    y: canvas.height / 2,
-    r: Math.random() * 6 + 4,
-    color: colors[Math.floor(Math.random() * colors.length)],
-    speedX: (Math.random() - 0.5) * 14,
-    speedY: Math.random() * -18 - 6,
-    gravity: 0.6
-  });
-}
-
-let frame = 0;
-function animate(){
-  frame++;
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-  confetti.forEach(c=>{
-    c.x += c.speedX;
-    c.y += c.speedY;
-    c.speedY += c.gravity;
-    ctx.beginPath();
-    ctx.fillStyle = c.color;
-    ctx.arc(c.x,c.y,c.r,0,Math.PI*2);
-    ctx.fill();
-  });
-  if(frame < 180){
-    requestAnimationFrame(animate);
-  }else{
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-  }
-}
-animate();
-
-window.addEventListener("resize", ()=>{
+function resize(){
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
-});
+}
+resize();
+window.addEventListener("resize", resize);
+
+const colors = ["#ff1744","#ffea00","#00e5ff","#76ff03","#ff9100","#e040fb"];
+
+let fireworks = [];
+let particles = [];
+
+// 🔥 Sky shot (rocket)
+class Firework{
+  constructor(){
+    this.x = Math.random() * canvas.width;
+    this.y = canvas.height;
+    this.targetY = Math.random() * canvas.height * 0.4 + 80;
+    this.speed = Math.random() * 3 + 5;
+    this.color = colors[Math.floor(Math.random()*colors.length)];
+  }
+  update(){
+    this.y -= this.speed;
+    if(this.y <= this.targetY){
+      explode(this.x, this.y, this.color);
+      return true;
+    }
+    return false;
+  }
+  draw(){
+    ctx.beginPath();
+    ctx.arc(this.x, this.y, 3, 0, Math.PI*2);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+  }
+}
+
+// 💥 Blast particles
+function explode(x,y,color){
+  for(let i=0;i<60;i++){
+    particles.push({
+      x,y,
+      angle: Math.random()*Math.PI*2,
+      speed: Math.random()*6+2,
+      radius: Math.random()*2+1,
+      life: 60,
+      color
+    });
+  }
+}
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  // launch fireworks
+  if(Math.random() < 0.05){
+    fireworks.push(new Firework());
+  }
+
+  fireworks = fireworks.filter(fw=>{
+    fw.draw();
+    return !fw.update();
+  });
+
+  particles = particles.filter(p=>{
+    p.life--;
+    p.x += Math.cos(p.angle)*p.speed;
+    p.y += Math.sin(p.angle)*p.speed;
+    p.speed *= 0.96;
+
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.radius,0,Math.PI*2);
+    ctx.fillStyle = p.color;
+    ctx.fill();
+
+    return p.life > 0;
+  });
+
+  requestAnimationFrame(animate);
+}
+
+animate();
+
+// ⏱️ Auto stop after 6 seconds
+setTimeout(()=>{
+  fireworks = [];
+  particles = [];
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+},6000);
 </script>
+
 
 
   
 </body>
 </html>
+
 
 
 
