--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
     <div class="banner-wrap">
   <div class="banner-track">
     <div class="banner-item">
-      <img src="offer1.png" alt="Offer Banner 1">
+      <img src="o1.png" alt="Offer Banner 1">
     </div>
     <div class="banner-item">
-      <img src="offer11.png" alt="Offer Banner 2">
+      <img src="o2.png" alt="Offer Banner 2">
     </div>
   </div>
 </div>
@@ -992,6 +992,7 @@ setTimeout(()=>{
   
 </body>
 </html>
+
 
 
 
